# mathx

./: Cargo.toml  README.md
src/: arithmetic.rs  colors.rs  lib.rs  main.rs  math.rs  plane.rs  quaternions.rs
src/collision/: mod.rs  raycast_info.rs
src/interfaces/: collision.rs  mod.rs
src/rays/: mod.rs  ray2.rs  ray3.rs
src/vectors/: mod.rs  vector2.rs  vector3.rs
